--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ For the detailed schema and it's description click on link below on Read More bu
             <nav id="menu">
               <ul>
                 <li><a href="index.html">Introduction</a></li>
-                <li><a href="simple_page.html">Getting started</a></li>
+
                 <li>
                   <span class="opener">Tutorial</span>
                   <ul>
@@ -384,6 +384,7 @@ For the detailed schema and it's description click on link below on Read More bu
                     <li><a href="#namespaces">Namespaces</a></li>
                     <li><a href="#example">Example Resource</a></li>
                     <li><a href="#query">Queries</a></li>
+                    <li><a href="#">Usage</a></li>
 
                   </ul>
                 </li>
@@ -398,8 +399,9 @@ For the detailed schema and it's description click on link below on Read More bu
                     <li><a href="#json">Dumps in JSON-LD</a></li>
                   </ul>
                 </li>
+                <li><a href="#">Insights</a></li>
 
-                <li><a href="https://www.google.com">External Link</a></li>
+
               </ul>
             </nav>
 
@@ -429,13 +431,21 @@ For the detailed schema and it's description click on link below on Read More bu
                 </a>
               </div>
             </div>
+ <div class="featured-posts">
+   <div class="heading">
+     <h2>Maintainers</h2>
+   </div>
+   <div class="featured-item">
 
-            <!-- Footer-->
+     <p style="tab-size:8;"><a href="https://dice-research.org/ManzoorAli">Manzoor Ali</a>   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;  <a href="https://dice-research.org/MuhammadSaleem"> Muhammad Saleem </a></p>
+   </div>
+ </div>
+            <!-- Footer
             <footer id="footer">
-              <p class="copyright">Maintainer : <a href="https://dice-research.org/ManzoorAli">Manzoor Ali </a>
-              <br>Designed by <a rel="nofollow" href="https://www.facebook.com/templatemo">Template Mo</a></p>
-            </footer>
+              <p class="copyright"> Maintainers : <a href="https://dice-research.org/ManzoorAli">Manzoor Ali </a>   <a href="https://dice-research.org/MuhammadSaleem">Muhammad Saleem</a> </p>
 
+            </footer>
+-->
           </div>
         </div>
 
