--- a/index.html
+++ b/index.html
@@ -355,8 +355,31 @@ For the detailed schema and it's description click on link below on Read More bu
                 </div>
               </div>
             </section>
+
+
+        <!-- Availability 3-->
+        <section class="right-image" id="public">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-content">
+                  <h4>Public Availability</h4>
+                  <p>The resource is publicaly available on the community registery in <a href="https://databus.dbpedia.org/">DBpedia Databus</a>. The link of the registery for the RELD will be share soon. </p>
+                  <h4 id="license">License</h4>
+                  <p> RELD is under the licence GNU General Public License v3.0. The <a href="https://github.com/dice-group/RELD/blob/main/LICENSE"> licence </a> is available on our Github repository.   </p>
+
+                </div>
+              </div>
+              <div class="col-md-6">
+                <h4 id ="Sustain">Sustainability</h4>
+                <p>We have a clear plan for future maintenance of the RELD Knowledge graph. In the next step, we are incorporating document-based relation extraction into the RELD schema. It will add more classes and relations to the original schema. The document-based relation extraction dataset is available in the form of DocRED. We have access to the dataset,
+                but we are waiting for the final consent of the author. In the second step, we will target the licensed/paid datasets such as TACRED. This step will add almost all types of existing RE datasets to the RELD knowledge graph.   </p>
+              </div>
+            </div>
           </div>
-        </div>
+        </section>
+      </div>
+    </div>
         <!-- Source Code -->
 
       <!-- Sidebar -->
@@ -389,7 +412,7 @@ For the detailed schema and it's description click on link below on Read More bu
                   </ul>
                 </li>
 
-                <li><a href="shortcodes.html">Sustainability</a></li>
+
                 <li>
                   <span class="opener">Availaibility</span>
                   <ul>
@@ -397,6 +420,9 @@ For the detailed schema and it's description click on link below on Read More bu
                     <li><a href="#endpoint">Live Endpoint</a></li>
                     <li><a href="#dumps">Static Dumps </a></li>
                     <li><a href="#json">Dumps in JSON-LD</a></li>
+                    <li><a href="#public">Public Availability</a></li>
+                    <li><a href="#Sustain">Sustainability</a></li>
+                    <li><a href="#license">License</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Insights</a></li>
