--- a/index.html
+++ b/index.html
@@ -75,11 +75,20 @@ https://templatemo.com/tm-529-ramayana
           <div class="inner">
 
             <!-- Header -->
-            <header id="header">
+            <header id="header" style="background-color:#006bd9;">
               <div class="logo">
+                <div style="height: 100px;
+                  width: 100px;
+                  float:right;
+                  background-color:#ffffff;
+                  margin-left: 150px;
+                  ">
+                <a href="https://dice-research.org/">  <img src="assets/images/dice-icon.png"/></a>
+                </div>
 
-                <a href="index.html">RELD: <span style="text-transform: capitalize; color: gray;"> A Knowledge Graph of Relation Extraction Datasets</span></a
-
+<div>
+                <a href="index.html">RELD: <span style="text-transform: capitalize; color: gray;"> A Knowledge Graph of Relation Extraction Datasets</span></a>
+</div>
               </div>
             </header>
 
@@ -96,12 +105,15 @@ https://templatemo.com/tm-529-ramayana
                   <div class="col-md-12">
 
                     <div class="down-content">
+
+                      <div>
                       <h4>Introduction</h4>
                       <p>In recent years, various supervised, semi-supervised, and unsupervised models have been proposed to extract relations from natural language texts. Consequently, various relation extraction datasets
  have been proposed to benchmark existing RE tools. These datasets are in different formats, e.g., NYT-FB, Wikipedia-Wikidata  are in JSON, WEBNLG  is in XML, SemEval 2010 Task 8 is in text form. Apart from this, these datasets have different style of annotation. The source of generation of these datasets also lack variance, which makes it hard for evaluations of RE systems.
 
 Keeping in view the aforementioned shortcomings, we present RELD, a single unified RDF representation of six relation extraction and classification datasets NYT-FB, Wikipedia-Wikidata, WEBNLG, SemEval 2010 Task 8, Google-RE  and FewRel well-known public and freely accessible relation extraction datasets. In RELD, each relation is modelled as a unique RDF resource and attached various statistics/annotations (e.g, corresponding entities, sentences, or a number of tokens in the sentences etc.) as properties. The resulting RELD RDF knowledge graph consists of
 55.54 million triples, 824 relations from 2 million sentences, collected from six datasets of different domains. To the best of our knowledge, RELD is the largest RDF dataset containing relations and entities annotations along with different information from diverse domains.</p>
+</div>
                     <!--  <div class="primary-button">
                         <a href="#">Read More</a>
                       </div> -->
